      pmdaapache, pmdabash, pmdagfs2, pmdasample, pmdasimple,
      pmdatrivial
    - libpcp: allow addition of free-form text to usage messages
    - pmgetopt: new cross-platform long option handling utility,
      allowing pcp shell scripts to acquire long option support
    - shell scripts updated to support long options:
      pcp, pmie2col, pmie_check, pmie_daily, pmlogger_check,
      pmlogger_daily, pmlogger_merge, pmlogmv, pmnewlog, pmwtf
    - pmlogger: improve pmlc access controls
    - man pages: more detailed pmlc/pmlogger access control docs

pcp-3.9.2 (15 April 2014)
    - python api: direct support for creating derived metrics
    - python api: fix C strings memory leak in pmExtractValue
    - python api: fix pmConvScale parameterization
    - python api: pmLookupName API mode allowing partial failure
    - python api: improvements to the pmErr exceptions class
    - python api: support auto-command-line-parsing in scripts
    - python api: switch to thread-safe pmGetContextHostname
    - pcp: support for scripted pcp(1) child commands, adding in
      pcp-free(1), pcp-uptime(1) and pcp-numastat(1) to get the
      ball rolling (python scripts)
    - pmlogmv: new utility to atomically move/rename archives
    - pmconfig: improvements to quoting for unusual versions
    - pmdaproc.sh: allow Install/Remove from any directory
    - libpcp: pmgetopt_r interface for use by collector tools
    - libpcp_pmda: slow-start PMDA changes
    - libpcp_pmda: fix a memory leak dealing in dynamic metrics,
      with PMDAs using the optional hashed metric table method.
    - libpcp_pmda: long option command line processing interface
    - libpcp_pmda: handle POSIXLY_CORRECT arguments internally
    - pmcd: remove POSIXLY_CORRECT env modifications
    - dbpmda: remove POSIXLY_CORRECT env modifications
    - pmlogger_check: add a no-merging-renaming-rewriting option
    - pmlogger_daily: don't merge archives if it is not needed
      (optimization)