@@ -19,7 +19,8 @@ pcp-3.9.3 (14 May 2014)
       allowing pcp shell scripts to acquire long option support
     - shell scripts updated to support long options:
       pcp, pmie2col, pmie_check, pmie_daily, pmlogger_check,
-      pmlogger_daily, pmlogger_merge, pmlogmv, pmnewlog, pmwtf
+      pmlogger_daily, pmlogger_merge, pmlogmv, pmnewlog, pmwtf,
+      pmsignal, pmlogconf
     - pmlogger: improve pmlc access controls
     - man pages: more detailed pmlc/pmlogger access control docs
 
